# algorep

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
config/: config.ron
scenarios/: crash.txt  crash_leader.txt  crash_majority.txt  crash_many.txt  recover.txt  slow_server.txt
src/: client.rs  config.rs  entry.rs  main.rs  message.rs  node.rs  role.rs  server.rs  state.rs
src/node/: client.rs  communication.rs  election.rs  handle.rs  mod.rs  networking.rs  node.rs  persistent_state.rs  repl.rs  role.rs  rpc_client.rs  rpc_server.rs  server.rs  utils.rs  volatile_state.rs
src/tests/: node.rs  utils.rs
