[package]
name = "algorep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.21", features = ["time", "sync", "macros", "rt", "rt-multi-thread"]}
once_cell = "1.16"
rand = "0.8.5"
env_logger = "0.9"
log = "0.4"
regex = "1.7.0"
